Score skill books on the gear scale; fix travel/shop regressions
Skill-book grind value was a fabricated curve (0.20 + levels/60, capped
0.60) that rode the gear lens structurally but not numerically: a full
Mastery 20->30 scored 0.60, i.e. "worth +60% of total offense", double
GEAR_DOMINANT_DPS_GAIN, while real MW30 is a few percent.

capGainFraction replaces it with two SSOT-scored halves, summed and
scaled by the book's application chance:
  - stat grants: the StatEffect statup delta between the current and new
    cap, mapped to the equip-stat vocabulary and priced by
    BotScrollManager.equipValueFromStats -- the scorer equips and
    scrolls already use. Percentage buffs resolve against the bot's own
    base stats as Character.recalcLocalStats applies them.
  - attack power: damage% across the skill's lines at the new cap over
    the bot's best current attack.
ACC is deliberately unmapped (equipValueFromStats has no accuracy term
either; the grind path prices accuracy via accuracyHitFactor, so mapping
it would double-count). Pure mitigation passives whose effect lives in
getX() rather than statups score zero -- a stated coverage gap, not a
knob.

Travel: a route recheck that cleared and re-pinned the SAME portal
restarted the walk budget every second, so the deadline never expired
and the give-up/warp fallback could never rescue a bot walking at an
unreachable portal. The commit now only restarts the budget when the pin
actually changes. The recheck also retires itself once a resolve runs
with warm inputs instead of re-running the exit scan + partition search
every second for the whole trip.

Shop: the return-scroll errand trigger had neither of the guards its pot
and ammo neighbours carry. It is now affordability-gated, and trigger is
split from target (3 vs 10) the way pots already split
POT_TRIGGER_THRESHOLD from POT_TARGET_THRESHOLD -- a bot holding 9
scrolls no longer walks to town to buy one.

Also records nav ledger #21: the 100000102 r14 drop-waypoi